# Cerebras-test-scripts

./: README.md  interactive.py  simplecompletion.py
cerebras_chat_gui/: Cargo.toml
cerebras_chat_gui/src/: main.rs
rustsimplecompletion/: Cargo.toml
rustsimplecompletion/src/: main.rs
rustversions/: Cargo.toml
rustversions/src/: main.rs
