[package]
name = "cerebras_chat_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.6", features = ["v4_6"] }
glib = "0.14"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9"
log = "0.4"
